[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab==4.0.3", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyter_rtc_test"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=2.0,<3",
    "y_py",
    "ypy_websocket",
    "jupyter_ydoc",
    "jupyterlab==4.0.3",
    "jupyter_collaboration",
    "uvicorn",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.scripts]
jupyter-rtc-test = "jupyter_rtc_test.__main__:main"

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ypy-websocket",
    "websockets",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build]
artifacts = [
  "jupyter_rtc_test/static",
  "jupyter_rtc_test/templates"
]

[tool.hatch.build.hooks.custom]

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_rtc_test/labextension"]
exclude = [".github", "binder", ".yarn"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_rtc_test/labextension" = "share/jupyter/labextensions/@datalayer/jupyter-rtc-test"
"install.json" = "share/jupyter/labextensions/@datalayer/jupyter-rtc-test/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.hooks.version]
path = "jupyter_rtc_test/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_rtc_test/labextension/static/style.js",
    "jupyter_rtc_test/labextension/package.json",
]
skip-if-exists = ["jupyter_rtc_test/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_rtc_test/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
